- Supports DCDT-315 and DCDT-316. - Updated build process to require and utilize Java 8. - Modified build versioning to utilize Git. - Fixed minor compilation warnings/errors specific to the language version upgrade. - Modified web front-end version information content.